# m3sc

./: .gitignore  CMakeLists.txt  README.md
exer0/: CMakeLists.txt  prog_1.c  prog_2.c  prog_3.c  prog_4.c  prog_5.c  prog_6.c
exer1a/: CMakeLists.txt  mastery.c  prog_1.c  prog_2.c  prog_3.c
exer1b/: CMakeLists.txt  cubic.c  lin.c  mastery.c  prog_1.c  prog_2.c  prog_4.c  prog_5.c  quad.c
exer1c/: CMakeLists.txt  array.c  mastery.c  prog_1.c  prog_2.c  prog_3.c  quartic.c
exer2/: CMakeLists.txt  mastery.c  prog_1.c  prog_3.c  prog_5.c  prog_6.c  solve_linear.c
exer3/: CMakeLists.txt  dst.c  factors.c  mastery.c  prog_1.c  prog_4.c  prog_5.c
tests/: CMakeLists.txt  array_cubic.cc  array_quad.cc  cubic.cc  dst.cc  main.cc  quadratic.cc  quartic.cc
